working webapp + eslint

--- a/solidity/package.json
+++ b/solidity/package.json
@@ -8,10 +8,15 @@
   },
   "semistandard": {
     "globals": [
+      "Web3",
       "web3",
       "assert",
       "it",
       "contract"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-plugin-react": "^7.3.0"
   }
 }
